Resolve issue with distorted Navbar CSS

--- a/src/pages/Signup/Signup.css
+++ b/src/pages/Signup/Signup.css
@@ -138,7 +138,7 @@
     margin: 10px 0;
   }
 
-  img{
+ .userlogo{
     width:55px;
     margin-top: -50px; 
     position: absolute;
